<resources>
    <string name="app_name">Museum of Glass</string>
    <string name="logo_desc">The Museum of Glass Logo</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_changePwd">Change Password</string>
    <string name="title_activity_updateCred">Update Login</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_createAccount">Create Account</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_upload">Upload File</string>
    <string name="btn_update">Update</string>
    <string name="btn_save">Save</string>
    <string name="btn_home">Home</string>
    <string name="btn_about">About the Kiosk</string>
    <string name="btn_login">Login</string>
    <string name="artist_name">David Walters</string>
    <string name="artist_tag">Blown Glass | American</string>
    <string name="artist_subBio">David was born in Central Pennsylvania
        in 1968 and studied at the Rhode Island School of Design from
        1989‐93. After graduating from the Rhode Island School of Design
        in 1993, he moved to Seattle to work for Dale Chihuly and  many
        highly regarded artists in the Puget Sound area and beyond.</string>
    <string name="artist_bio">
        After receiving his BFA in Glass from the Rhode Island School of Design,
        David Walters moved to Seattle to work for Dale Chihuly, for whom he
        still works to this day. There, he met Lino Tagliapietra and also began
        working as his assistant, a role he has had for 17 years that has taken
        him all over the world and provided the central influence in his life and
        work. Walters began experimenting with his signature painted enamel on
        glass technique during a 1995 residency at the Creative Glass Center of
        America in Millville, NJ (where he had another residency in 2004), an
        intricate narrative style that distinguishes him from other glass artists.
        \n
        \n
        Walters begins by blowing a milky white glass—into serpentine vessels,
        distorted eggs at times festooned with hats, hyperbolic pitchers and vases,
        toy cars, and other fantastic shapes. They become the canvas for his
        minimally colored (mostly black, some primary yellow, blue, and red) exquisitely
        rendered drawings. Walters calls upon the slightly macabre archetypes of fairy
        tales and Grimm’s nursery rhymes to tell a moral tale about the nature of human
        actions and consequences.  Walters exposes the challenges of modern living—our
        ability to face life’s pitfalls, manage our desires, and live selflessly—when
        society often  shields us against reality, pushes us to give in to instant
        gratification, and rewards us for forgetting our moral compass. But Walters’
        message is not one of mere indictment; rather it is a salve against
        desensitization, connecting us to our humanity and steering us off the path to
        ruin. Though the work uses a deeply personal vocabulary, we are all able to
        relate to the struggle to overcome darkness and embrace the hope of the human
        spirit. Walters is showing us that we need to look within, not without, to find
        our own fulfillment.
        \n
        \n
        Like many glass artists, Walters is a perpetual student of his craft but also
        guides the next generation, teaching at various institutions from Haystack School
        of Crafts (Deer Isle, ME), to Pilchuck Glass School (Stanwood, WA), Pittsburgh
        Glass Center (PA), Illinois State University (Normal, IL), and Emporia State
        University (Lyon, KS). He has had numerous solo gallery and museum exhibitions and
        was featured in Lino e Amici at Fuller Museum of Art (Brockton, MA) and the
        Living Legacies Show at the Museum of Glass in Tacoma, WA.
        \n
        \n
        \n
        \n
    </string>
    <string name="artist_featuredQuote">
        “&#8230;his work makes current the centuries old practice of using storytelling as a way to teach, inspire, and caution. ”
    </string>
    <string name="artist_img_desc">An image of the artist</string>
    <string name="artist_bio_title">About the Artist</string>
    <string name="artist_relatedWork1_title">Related Work</string>
    <string name="work_img_desc">An image of End of Day Chandelier</string>
    <string name="work_desc">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Pellentesque libero massa, pellentesque id placerat nec,
        consequat luctus tortor. Morbi congue scelerisque odio
        eu varius. In placerat pretium odio tristique congue.
        Mauris elementum magna ornare diam dictum, eget vehicula
        lacus suscipit. Sed sed lacus congue, pulvinar augue a,
        bibendum massa. Nullam porttitor posuere tempus. Cras
        turpis massa, rutrum eget eros a, lacinia accumsan odio.
        Integer convallis tristique sollicitudin. Integer ut
        auctor nisl, ac pretium enim.
        \n
        \n
        Duis id mi aliquet, pulvinar diam consectetur, efficitur
        sapien. Maecenas ac posuere massa, in bibendum nunc.
        Pellentesque ornare congue odie eget aliquam. Quisque
        dictum, ligula quis pretium sagittis, mauris magna
        feugiat velit, vel mattis purus metus a orci. Phasellus
        iaculis ligula turpis, et tempus orci euismod vitae.
        Vivamus maximus eu lectus eu ullamcorper. Curabitur ut
        lacus vel mi aliquet consequat at ac turpis.
    </string>
    <string name="work_desc_title">About the work</string>
    <string name="work_title">The Ones that Got Away</string>
    <string name="work_date">2007</string>
    <string name="work_tableTitle_artist">ARTIST</string>
    <string name="work_tableTitle_date">DATE</string>
    <string name="work_tableTitle_medium">MEDIUM</string>
    <string name="work_tableTitle_dims">DIMENSIONS</string>
    <string name="work_tableTitle_collection">COLLECTION</string>
    <string name="work_tableTitle_credit">PHOTO BY</string>
    <string name="work_tableEntry_artist">David Walters (American, born 1968)</string>
    <string name="work_tableEntry_date">Made at the Museum in 2007</string>
    <string name="work_tableEntry_medium">Blown glass and enamel paint</string>
    <string name="work_tableEntry_dims">29 x 9 x 8 in. (73.7 x 22.9 x 20.3 cm)</string>
    <string name="work_tableEntry_collection">Collection of Museum of Glass, Tacoma, Washington,
        \ngift of the artist</string>
    <string name="work_tableEntry_credit">Russell Johnson</string>
    <string name="process_video_title">David Walters in the Hot Shop</string>
    <string name="process_video_detail">1 Video, 1:50 min</string>
    <string name="about_title">About the Kiosk</string>
    <string name="about_text">
        This kiosk was designed by a team of four Computer Science
        students from the University of Puget Sound: Ayse Hunt, Kayla
        Ramos, Marwan Johnstone, and Nick Bigger. The idea for this
        project stemmed from research that Ayse completed as part of
        her undergraduate thesis studying the use of educational
        technology in art museums. This work suggests the potential
        of digital tools to provide uniquely flexible and
        self-directed learning experiences for museum visitors.
        \n
        \n
        Ayse pitched the idea of creating an interactive kiosk to
        feature video content to the rest of the team in November
        2018. From there, the team decided to build an application
        that would showcase a particular piece of art, including
        biographical information about the artist and video of the
        piece\'s creation.
        \n
        \n
        This project was made possible with help of Rebecca Engelhardt,
        Katie Buckingham, and Professor Adam A Smith. In addition we\'d
        like to thank the following donors for their generous help in fund the
        purchase of this tablet"

            Tammy Ramos
            Dustin Cook
            Thomas Hunt
            Curt and Paige Houck
            Chris Lawson
            Mikako Endo
            Catherine Hunt
            James and Jennifer Bigger
            Hunter Loftus
            Jesse Endo Jenks
            2 Anonymous donors
        \n
        \n

    </string>
    <string name="about_mainImg_desc">A view of the Museum of Glass</string>
    <string name="about_kaylaImg">Kayla Ramos, developer</string>
    <string name="about_marwanImg">Marwan Johnstone, developer</string>
    <string name="about_nickImg">Nick Bigger, developer</string>
    <string name="about_ayseImg">Ayse Hunt, developer</string>
    <string name="a_artistname">android.content.SharedPreferences.a_artistname</string>
    <string name="a_tag">android.content.SharedPreferences.a_tag</string>
    <string name="a_bio">android.content.SharedPreferences.a_bio</string>
    <string name="a_subbio">android.content.SharedPreferences.a_subbio</string>
    <string name="artistAdmin_info_title">Artist Info:</string>
    <string name="artistAdmin_bio_title">Artist Bio:</string>
    <string name="artistAdmin_currImg_title">Current Image:</string>
    <string name="artistAdmin_addName_label">Add a name for the artist</string>
    <string name="artistAdmin_addTag_label">e.g Medium | Nationality</string>
    <string name="artistAdmin_addBio_label">The main bio for the artist</string>
    <string name="artistAdmin_addSubBio_label">A smaller blurb about the artist</string>
    <string name="artistAdmin_currImg_desc">A picture of the artist</string>
    <string name="a_workartist">android.content.SharedPreferences.a_workartist</string>
    <string name="a_piecedate">android.content.SharedPreferences.a_piecedate</string>
    <string name="a_title">android.content.SharedPreferences.a_title</string>
    <string name="a_medium">android.content.SharedPreferences.a_medium</string>
    <string name="a_collection">android.content.SharedPreferences.a_collection</string>
    <string name="a_dimension">android.content.SharedPreferences.a_dimension</string>
    <string name="a_date">android.content.SharedPreferences.a_date</string>
    <string name="a_photo">android.content.SharedPreferences.a_photo</string>
    <string name="workAdmin_workInfo_title">Work Info:</string>
    <string name="workAdmin_labelInfo_title">Label Info and Work Description:</string>
    <string name="workAdmin_mainImg_title">Main Image:</string>
    <string name="workAdmin_relatedWork_title">Related Work Images:</string>
    <string name="workAdmin_pieceTitle_label">Title of Piece</string>
    <string name="workAdmin_pieceYear_label">Year of Piece</string>
    <string name="workAdmin_infoName_label">Artist Name</string>
    <string name="workAdmin_infoDate_label">Date (from label, including location)</string>
    <string name="workAdmin_infoMedium_label">Medium</string>
    <string name="workAdmin_infoDimen_label">Dimensions</string>
    <string name="workAdmin_infoCollect_label">Collection</string>
    <string name="workAdmin_infoCredit_label">Photo Credit</string>
    <string name="workAdmin_infoDesc_label">Description of the Work</string>
    <string name="workAdmin_addImg_desc">Upload an image</string>
    <string name="details_subTitle">Please fill out your details below</string>
    <string name="error_usn">*Username is less than 5 characters long</string>
    <string name="error_pwd">*Password is less than 5 characters long</string>
    <string name="input_new_usn">New Username</string>
    <string name="input_new_pwd">New Password</string>
    <string name="input_retype_pwd">Retype New Password</string>
    <string name="input_new_email">New Email Address</string>
    <string name="updateCred_error_email">*Please enter a valid email</string>
    <string name="changePwd_error_match">Passwords do not match!</string>
</resources>