<?xml version="1.0" encoding="utf-8"?>
<!--Parallax view adapted from https://androidbuddydev.blogspot.com/2017/08/android-parallax-scrolling-effect.html-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/main.backdrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/outside_museum"
                android:contentDescription="@string/about_mainImg_desc"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/about_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginStart="900dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_panel"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/side_panel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_panel"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/dev_photo_1"
                    android:layout_width="0dp"
                    android:layout_height="147dp"
                    android:layout_marginTop="84dp"
                    android:contentDescription="@string/about_kaylaImg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/kayla" />

                <ImageView
                    android:id="@+id/dev_photo_2"
                    android:layout_width="0dp"
                    android:layout_height="147dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/about_marwanImg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dev_photo_3"
                    app:srcCompat="@drawable/nick" />

                <ImageView
                    android:id="@+id/dev_photo_3"
                    android:layout_width="0dp"
                    android:layout_height="147dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/about_nickImg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dev_photo_1"
                    app:srcCompat="@drawable/marwan" />

                <ImageView
                    android:id="@+id/dev_photo_4"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="84dp"
                    android:contentDescription="@string/about_ayseImg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.488"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dev_photo_2"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ayse" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/text_panel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="300dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:lineSpacingExtra="8dp"
                    android:padding="@dimen/appbar_padding_top"
                    android:text="@string/about_title"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/about_text"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about_title"
                    app:layout_constraintVertical_bias="0.0" />
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>


